--- a/snake.css
+++ b/snake.css
@@ -12,8 +12,8 @@ body {
     //text-align: center;
     
     position:absolute; 
-    width: 140px;
-    height: 100px;
+    //width: 140px;
+    //height: 100px;
     left: 10px;
     top: 10px;
     border-top-left-radius: 15px; 
@@ -21,9 +21,9 @@ body {
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
     padding-top: 10px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
     padding-left: 20px;
-    padding-right: 0px;
+    padding-right: 20px;
     background: rgba(0,0,0,0.2); 
     box-shadow: 0px 0px 5px 3px silver;
     color: black; 
@@ -68,9 +68,9 @@ td.tr{
 #steuerung {
     position: fixed;
     bottom: 70px;
-    left: 180px;;
-    width: 380px;
-    height: 360px;
+    left: 170px;;
+    //width: 380px;
+    //height: 360px;
     background: silver;   
     text-align: center;
     
@@ -79,11 +79,57 @@ td.tr{
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     padding-left: 20px;
-    padding-right: 5px;
+    padding-right: 20px;
     //background: rgba(0,0,0,0.9); 
     box-shadow: 0px 0px 5px 3px silver;
+}
+
+#divHighscore {
+    position: fixed;
+    bottom: 70px;
+    left: 120px;;
+    //width: 380px;
+    //height: 360px;
+    background: silver;   
+    text-align: center;
+    
+    border-top-left-radius: 15px; 
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    //background: rgba(0,0,0,0.9); 
+    box-shadow: 0px 0px 5px 3px silver;
+}
+
+#impressum {
+    position: fixed;
+    bottom: 70px;
+    left: 145px;;
+    //width: 420px;
+    //height: 250px;
+    background: silver;   
+    text-align: center;
+    
+    border-top-left-radius: 15px; 
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    //background: rgba(0,0,0,0.9); 
+    box-shadow: 0px 0px 5px 3px silver;
+}
+
+#impressum img {
+    margin-top: -50px;
 }
 
 #steuerung p{
