--- a/snake.css
+++ b/snake.css
@@ -85,7 +85,8 @@ th {
 #debugHud {
     font-size: 10px;
     position: fixed;
-    top: 0px; width: 100%;
+    top: 150px;
+    width: 100%;
     padding: 10px;
     //text-align: center;
 }
