--- a/snake.css
+++ b/snake.css
@@ -146,6 +146,38 @@ th {
     padding: 5px;
 }
 
+#optionen {
+    position: fixed;
+    bottom: 70px;
+    left: 450px;;
+    //width: 380px;
+    //height: 360px;
+    background: silver;   
+    text-align: center;
+    
+    border-top-left-radius: 15px; 
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    //background: rgba(0,0,0,0.9); 
+    box-shadow: 0px 0px 5px 3px silver;
+}
+
+#optionen table {
+    border-spacing: 0;
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+}
+#optionen td {
+    border: black thin solid;
+    padding: 5px;
+}
+
 td.linksb {
     text-align: left;
     padding-left: 10px !important;
