--- a/snake.css
+++ b/snake.css
@@ -207,7 +207,7 @@ td.linksb {
 #impressum {
     position: fixed;
     bottom: 70px;
-    left: 145px;;
+    left: 145px;
     //width: 420px;
     //height: 250px;
     background: silver;   
@@ -292,6 +292,20 @@ canvas:hover {
 
 canvas:active {
     cursor: all-scroll;
+}
+
+#JavaScriptHinweis {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    text-align: center;
+    vertical-align: middle;
+    z-index: 9999;
+    
+    background: rgba(0,0,0, 0.3); 
 }
 
 // Quelle Buttons: http://css-tricks.com/examples/ButtonMaker/#
