--- a/snake.css
+++ b/snake.css
@@ -221,7 +221,6 @@ td.linksb {
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    //background: rgba(0,0,0,0.9); 
     box-shadow: 0px 0px 5px 3px silver;
 }
 
@@ -298,14 +297,39 @@ canvas:active {
     position: fixed;
     left: 0;
     top: 0;
+    margin: 0;
     width: 100%;
     height: 100%;
-    margin: 0;
+    display: table;
+    
+    z-index: 9999;
+    background: white url('snakeScreenshot.png');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#JavaScriptHinweis > div {
+    display: table-cell;
     text-align: center;
     vertical-align: middle;
-    z-index: 9999;
+}
+#JavaScriptHinweis > div > div {
+    text-align: center;
+    vertical-align: middle;
     
-    background: rgba(0,0,0, 0.3); 
+ //   background: rgba(255,255,255, 0.5);
+    background: white;   
+    text-align: center;
+    
+    border-top-left-radius: 15px; 
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: 0px 0px 5px 3px white;
 }
 
 // Quelle Buttons: http://css-tricks.com/examples/ButtonMaker/#
